Add support for user accounts and fulfillment by ezbookbot, also added /done command

--- a/sample_config.env
+++ b/sample_config.env
@@ -1,13 +1,18 @@
 API_ID=""
 API_HASH=""
+
+# Use either BOT_TOKEN or SESSION_STRING, if both are set, SESSION_STRING will be given preference
 BOT_TOKEN=""
+SESSION_STRING=""
+
 SUDO_USERS="" # Space separated values
 
 GROUP_ID="-100"
 GROUP_NAME="X"
+EZBOOKBOT_ID="1699727751"
 DATABASE_URL=""
 
 ENG_REQ_TIME=""
 NON_ENG_REQ_TIME=""
 
-EXCLUDED_HASHTAGS="#scribd"
+EXCLUDED_HASHTAGS="#scribd #storytel"
